--- a/aboutus.html
+++ b/aboutus.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-
-    <title>Le Chocolat</title>
-
-</head>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="css/styles.css" rel="stylesheet">
+    <title>Le Chocolat</title>    
 
 <body>
 
@@ -98,6 +97,10 @@
            </div>
         </div>
     </footer>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
