--- a/aboutus.html
+++ b/aboutus.html
@@ -4,17 +4,42 @@
 <head>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Le Chocolat</title>    
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <title>Le Chocolat</title>
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
+        <div class="container">
+            <a class="navbar-brand" href="#">Le Chocolat</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
-                    <p>We combine experience with creativity to create innovative tastes based on classic chocolate recipes. Our creations will travel you in the chocolate world!</p>
+                    <p>We combine experience with creativity to create innovative tastes based on classic chocolate
+                        recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
                 </div>
@@ -23,24 +48,28 @@
     </header>
 
     <div class="container">
-            <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">About us</li>
-                    </ol>
-                </nav>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">About us</li>
+            </ol>
+        </nav>
         <div class="row">
             <div class="col-12">
-               <h3>About Us</h3>
-               <hr>
+                <h3>About Us</h3>
+                <hr>
             </div>
         </div>
-        
+
         <div class="row">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper nunc quis maximus pharetra. Quisque ut molestie ante. Donec mattis pharetra erat, eu ultricies ipsum faucibus et. Curabitur ultrices risus turpis, laoreet pulvinar justo interdum in. Quisque vel semper tellus. Etiam nibh arcu, sodales quis ultrices nec, egestas vitae libero. </p>
-                <p>Nulla ultrices diam at tortor volutpat, <em>et facilisis justo facilisis</em>. Phasellus dignissim euismod mi eget dignissim. Sed eget consequat urna. </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper nunc quis maximus
+                    pharetra. Quisque ut molestie ante. Donec mattis pharetra erat, eu ultricies ipsum faucibus et.
+                    Curabitur ultrices risus turpis, laoreet pulvinar justo interdum in. Quisque vel semper tellus.
+                    Etiam nibh arcu, sodales quis ultrices nec, egestas vitae libero. </p>
+                <p>Nulla ultrices diam at tortor volutpat, <em>et facilisis justo facilisis</em>. Phasellus dignissim
+                    euismod mi eget dignissim. Sed eget consequat urna. </p>
             </div>
             <div class="col col-sm">
             </div>
@@ -51,21 +80,25 @@
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Jim Alcon <small>Chief Executive Officer </small></h3>
-                <p class="d-none d-sm-block">Jim Alcon is the CEO of our company. He is responsible for the policy and strategy of our company. </p>
-                <h3>Bill Peterson  <small>Chief Financial Officer </small></h3>
-                <p class="d-none d-sm-block">Bill Peterson is the CFO of our company. He is responsible for all the financial decisions of our company. </p>
+                <p class="d-none d-sm-block">Jim Alcon is the CEO of our company. He is responsible for the policy and
+                    strategy of our company. </p>
+                <h3>Bill Peterson <small>Chief Financial Officer </small></h3>
+                <p class="d-none d-sm-block">Bill Peterson is the CFO of our company. He is responsible for all the
+                    financial decisions of our company. </p>
                 <h3>John Cook <small>Chef</small></h3>
-                <p class="d-none d-sm-block">Our Chef, John Cook has specialized in the production of chocolates and he has created the receipts for our chocolates. </p>
-                <h3>Vasilis Wilson  <small>Sous-chef </small></h3>
-                <p class="d-none d-sm-block">Vasilis Wilson is well informed of all the current trends in pastry and contributes his innovative ideas in our products. </p>
+                <p class="d-none d-sm-block">Our Chef, John Cook has specialized in the production of chocolates and he
+                    has created the receipts for our chocolates. </p>
+                <h3>Vasilis Wilson <small>Sous-chef </small></h3>
+                <p class="d-none d-sm-block">Vasilis Wilson is well informed of all the current trends in pastry and
+                    contributes his innovative ideas in our products. </p>
             </div>
-       </div>
+        </div>
 
     </div>
 
     <footer class="footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
@@ -84,24 +117,30 @@
                         Tel.: +987 6543 2100<br>
                         Fax: +987 6543 2101<br>
                         Email: <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
-		           </address>
+                    </address>
                 </div>
                 <div class="col-sm align-self-center">
                     <div style="text-align:center">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
+                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
+                            <i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
+                            <i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
+                            <i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
+                            <i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
+                            <i class="fa fa-youtube"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:">
+                            <i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
-           </div>
-           <div class="row justify-content-center">             
+            </div>
+            <div class="row justify-content-center">
                 <div class="col-auto">
                     <p>&copy; Copyright 2018 Le Chocolat</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
