--- a/aboutus.html
+++ b/aboutus.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link href="css/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <title>Le Chocolat</title>
-</head>
+    <head>
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link href="css/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+        <title>Le Chocolat</title>
+    </head>
 
 <body>
+    <!--NAVIGATION-->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
         <div class="container">
             <a class="navbar-brand" href="#">Le Chocolat</a>
@@ -33,6 +34,7 @@
             </div>
         </div>
     </nav>
+    <!--HEADER-->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -46,7 +48,7 @@
             </div>
         </div>
     </header>
-
+<!--MAIN CONTENT-->
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -76,7 +78,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Jim Alcon <small>Chief Executive Officer </small></h3>
@@ -93,9 +95,15 @@
                     contributes his innovative ideas in our products. </p>
             </div>
         </div>
-
+        <div class="row row-content">
+            <div class="col-12 col-sm-9">
+                <h2> Create your milk chocolate!</h2>
+            </div>
+            <div class="col-12 col-sm-3">
+            </div>
+        </div>
     </div>
-
+<!--FOOTER-->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -121,7 +129,7 @@
                 </div>
                 <div class="col-sm align-self-center">
                     <div style="text-align:center">
-        
+
                         <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
                             <i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
@@ -144,6 +152,7 @@
             </div>
         </div>
     </footer>
+
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
