--- a/aboutus.html
+++ b/aboutus.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link href="css/styles.css" rel="stylesheet">
-        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-        <title>Le Chocolat</title>
-    </head>
+<head>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <title>Le Chocolat</title>
+</head>
 
 <body>
     <!--NAVIGATION-->
@@ -48,7 +48,7 @@
             </div>
         </div>
     </header>
-<!--MAIN CONTENT-->
+    <!--MAIN CONTENT-->
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -74,6 +74,21 @@
                     euismod mi eget dignissim. Sed eget consequat urna. </p>
             </div>
             <div class="col col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-secondary text-white">Facts At a Glance</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Started</dt>
+                            <dd class="col-6">3 Feb. 2013</dd>
+                            <dt class="col-6">Major Stake Holder</dt>
+                            <dd class="col-6">HW Fine Sweets Inc.</dd>
+                            <dt class="col-6">Last Year's Turnover</dt>
+                            <dd class="col-6">$250,000</dd>
+                            <dt class="col-6">Employees</dt>
+                            <dd class="col-6">10</dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -98,12 +113,41 @@
         <div class="row row-content">
             <div class="col-12 col-sm-9">
                 <h2> Create your milk chocolate!</h2>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <caption>This recipe makes a bar of about 100g.</caption>
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Igredients</th>
+                                <th>Quantity</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Cocoa butter</td>
+                                <td>50 g</td>
+                            </tr>
+                            <tr>
+                                <td>Icing sugar</td>
+                                <td>50 g</td>
+                            </tr>
+                            <tr>
+                                <td>Milk powder (Full fat)</td>
+                                <td>25 g</td>
+                            </tr>
+                            <tr>
+                                <td>Cocoa powder (Unsweetended)</td>
+                                <td>13 g</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="col-12 col-sm-3">
             </div>
         </div>
     </div>
-<!--FOOTER-->
+    <!--FOOTER-->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -152,6 +196,7 @@
             </div>
         </div>
     </footer>
+    <!--END OF FOOTER-->
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
