--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/dark85.jpg" alt="85% DARK CHOCOLATE">
                     <div class="media-body">
-                        <h2 class="mt-0">85% DARK CHOCOLATE</h2>
+                        <h2 class="mt-0">85% DARK CHOCOLATE
+                            <span class="badge badge-danger">HOT</span>
+                            <span class="badge badge-pill badge-success">$0.99</span>
+                        </h2>
                         <p class="col d-none d-md-block">Dark chocolate with no added sugar.
                             Here you can taste the flavor of cocoa beans.</p>
                     </div>
@@ -94,7 +97,7 @@
             <div class="col-sm-4 col-md-3">
                 <h3>Meet our Specialists</h3>
             </div>
-            <div class="col-sm-4 col-md-3">
+            <div class="col-sm col-md">
                 <!-- <h2>Vasilis Wilson </h2>
                 <h4>Sous-chef</h4>
                 <p>Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in
