Bootstrap Assignment 4 Task

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/promotion.jpg" alt="Promotion">
                     <div class="media-body">
                         <h2 class="mt-0">WEEK’S OFFER
-                            <span class="badge badge-danger">HOT</span>
-                            <span class="badge badge-pill badge-success">$0.99</span>
+                            <span class="badge badge-danger">NEW</span>
+                            <span class="badge badge-pill badge-success">$4.99</span>
                         </h2>
                         <p class="col d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
                     </div>
