--- a/contactus.html
+++ b/contactus.html
@@ -19,19 +19,20 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Le Chocolat</a>
+            <!-- <a class="navbar-brand" href="">Le Chocolat</a> -->
+            <a class="navbar-brand" href="./index.html"><img src="images/logo.png" height="40" width="54"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="./index.html">
+                    <li class="nav-item "><a class="nav-link" href="./index.html">
                             <span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html">
                             <span class="fa fa-info fa-lg"> </span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">
-                            <span class="fa fa-list fa-lg"> Menu</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html">
+                            <span class="fa fa-list fa-lg"></span> Menu</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="./contactus.html">
                             <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
@@ -47,6 +48,7 @@
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
+                    <img src="images/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -101,7 +103,71 @@
                 <h3>Send us your Feedback</h3>
             </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form>
+                    <!--1st field-Fist Name-->
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+                        </div>
+                    </div>
+                    <!--2nd field-Last name-->
+                    <div class="form-group row">
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
+                        </div>
+                    </div>
+                    <!--3rd field-Telephone-->
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
+                        <div class="col-5 col-sm-4 col-md-3">
+                            <div class="input-group">
+                                <div class="input-group-addon">(</div>
+                                <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
+                                <div class="input-group-addon">)</div>
+                            </div>
+                        </div>
+                        <div class="col-7 col-sm-6 col-md-7">
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
+                        </div>
+                    </div>
+                    <!--4th field-email-->
+                    <div class="form-group row">
+                        <label for="emailid" class="col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                        </div>
+                    </div>
+                    <!--5th field-checkbox-->
+                    <div class="form-group row">
+                        <div class="form-check col-md-6 offset-md-2">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" name="approve" value="">
+                                <strong>May we contact you?</strong>
+                            </label>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!--6th field-texterea-->
+                    <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <!--7th field-Submit button-->
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="col-12 col-md">
             </div>
