Bootstrap Assignment 9 Task 2

--- a/contactus.html
+++ b/contactus.html
@@ -165,6 +165,7 @@
                     <div class="form-group row">
                         <div class="offset-md-2 col-md-10">
                             <button type="submit" class="btn btn-primary">Send Feedback</button>
+                            <button type="reset" class="btn btn-secondary">Reset form</button>
                         </div>
                     </div>
                 </form>
