--- a/index.html
+++ b/index.html
@@ -33,32 +33,37 @@
                         <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                        <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>
+                            Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
+    <!--header-->
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-header">
-                <div class="col-12 col-sm-8">
+            <div class="row row-header align-items-center">
+                <div class="col-12 col-sm-6">
                     <h1>Le Chocolat</h1>
                     <p>We combine experience with creativity to create innovative tastes based on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
-                <div class="col col-sm">
-                    <div class="col col-sm">
-                        <img src="images/logo.png" class="img-fluid">
-                    </div>
+
+                <div class="col col-sm-3">
+                    <img src="images/logo.png" class="img-fluid">
                 </div>
+                <div class="col col-sm-3">
+                    <a class="btn btn-sm btn-warning" href="#bskt">Reserve your baskets</a>
+                </div>
+
+
             </div>
         </div>
     </header>
 
     <div class="container">
-       <!--  <nav aria-label="breadcrumb">
+        <!--  <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item active" aria-current="page">Home</li>
             </ol>
@@ -99,7 +104,7 @@
                 </div>
             </div>
         </div>
-<!--         <div class="row flex-row-reverse row-content align-items-center">
+        <!--         <div class="row flex-row-reverse row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/promotion.jpg" alt="promotion">
@@ -116,80 +121,127 @@
                 </div>
             </div> -->
 
-            <div class="row flex-row-reverse row-content align-items-center">
-                <div class="col-sm-4 col-md-3">
-                    <h3>Meet our Specialists</h3>
-                </div>
-                <div class="col-sm col-md">
-                    <!-- <h2>Vasilis Wilson </h2>
+
+
+        <!--3rd row-->
+        <div class="row flex-row-reverse row-content align-items-center">
+            <div class="col-sm-4 col-md-3">
+                <h3>Meet our Specialists</h3>
+            </div>
+            <div class="col-sm col-md">
+                <!-- <h2>Vasilis Wilson </h2>
                 <h4>Sous-chef</h4>
                 <p>Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in
                     our products.</p> -->
-                    <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/cartoonVasilis.png" alt="Vasilis Wilson">
-                        <div class="media-body">
-                            <h2 class="mt-0">Vasilis Wilson</h2>
-                            <p class="col d-none d-md-block">Vasilis is well informed of all the current
-                                trends in pastry and contributes his innovative ideas in our products.</p>
-                        </div>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/cartoonVasilis.png" alt="Vasilis Wilson">
+                    <div class="media-body">
+                        <h2 class="mt-0">Vasilis Wilson</h2>
+                        <p class="col d-none d-md-block">Vasilis is well informed of all the current
+                            trends in pastry and contributes his innovative ideas in our products.</p>
                     </div>
                 </div>
             </div>
         </div>
-
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-5 offset-1 col-sm-2">
-                        <h5>Links</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./aboutus.html">About</a></li>
-                            <li><a href="#">Menu</a></li>
-                            <li><a href="./contactus.html">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-sm-5">
-                        <h5>Our Address</h5>
-                        <address>
-                            121, Clear Wave Road<br>
-                            Clear Wave Road, Aloha<br>
-                            HAWAII<br>
-                            <i class="fa fa-phone fa-lg"></i>: +987 6543 2100 <br>
-                            <i class="fa fa-fax fa-lg"></i>: +987 6543 2101 <br>
-                            <i class="fa fa-envelope fa-lg"></i>:
-                            <a href="mailto: chocolat@nomail.net"> chocolat@nomail.net </a>
-                        </address>
-                    </div>
-                    <div class="col col-sm-4 align-self-center">
-                        <div style="text-align:center" class="col-auto">
-                            <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
-                                <i class="fa fa-google-plus"></i></a>
-                            <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
-                                <i class="fa fa-facebook"></i></a>
-                            <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
-                                <i class="fa fa-linkedin"></i></a>
-                            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
-                                <i class="fa fa-twitter"></i></a>
-                            <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
-                                <i class="fa fa-youtube"></i></a>
-                            <a class="btn btn-social-icon" href="mailto:">
-                                <i class="fa fa-envelope-o"></i></a>
-                        </div>
+        <!--4th-->
+        <div class="row">
+            <div class="col justify-content-center">
+                <div class="card">
+                    <div class="card-header bg.warning">Reserve your baskets</div>
+                    <div class="card-body">
+                        <form id="bskt" action="">
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optradio">1
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optradio">2
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optradio">3
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optradio">4
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optradio">5
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input type="radio" class="form-check-input" name="optradio">6
+                                </label>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="row justify-content-center">
-                        <p> &copy; Copyright 2018 Le Chocolat</p>
+
+            </div>
+        </div>
+    </div>
+
+    <!--Footer-->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-5 offset-1 col-sm-2">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-5">
+                    <h5>Our Address</h5>
+                    <address>
+                        121, Clear Wave Road<br>
+                        Clear Wave Road, Aloha<br>
+                        HAWAII<br>
+                        <i class="fa fa-phone fa-lg"></i>: +987 6543 2100 <br>
+                        <i class="fa fa-fax fa-lg"></i>: +987 6543 2101 <br>
+                        <i class="fa fa-envelope fa-lg"></i>:
+                        <a href="mailto: chocolat@nomail.net"> chocolat@nomail.net </a>
+                    </address>
+                </div>
+                <div class="col col-sm-4 align-self-center">
+                    <div style="text-align:center" class="col-auto">
+                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
+                            <i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
+                            <i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
+                            <i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
+                            <i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
+                            <i class="fa fa-youtube"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:">
+                            <i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- jQuery first, then Tether, then Bootstrap JS. -->
-        <script src="node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="node_modules/tether/dist/js/tether.min.js"></script>
-        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+            <div class="row justify-content-center">
+                <div class="row justify-content-center">
+                    <p> &copy; Copyright 2018 Le Chocolat</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
