--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="card mb-3">
                     <div class="card-header bg-warning">Reserve your baskets</div>
                     <div class="card-body">
-                        <form action="">
+                        <form id="bskt" action="">
                             <div class="form-group row">
                                 <div class="col-sm-3">
                                     <label for="radiobtn">Number of baskets</label>
