--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
                 <div class="col col-sm-3">
                     <img src="images/logo.png" class="img-fluid">
                 </div>
+
+                <!--task 1-->
                 <div class="col col-sm-3">
-                    <a class="btn btn-sm btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+ 987 6543 2100</strong>"
-                        data-placement="bottom" href="#bskt">Reserve your baskets</a>
+                    <a class="btn btn-sm btn-warning" data-toggle="modal" data-target="#newModal" data-placement="bottom">Reserve
+                        your baskets</a>
+
                 </div>
-
-
+                <!--task 1-->
             </div>
         </div>
     </header>
@@ -255,10 +257,25 @@
             </div>
         </div>
         <!--4th-->
-        <div class="row justify-content-center">
-            <div class="col col-sm-8 col-12 ">
-                <div class="card mb-3">
-                    <div class="card-header bg-warning">Reserve your baskets</div>
+
+    </div>
+
+    <!--Reserve modal-->
+    <div id="newModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve your baskets </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!--modal body-->
+                <div class="modal-body">
+
+
+
+
                     <div class="card-body">
                         <form id="bskt" action="">
                             <div class="form-group row">
@@ -316,17 +333,46 @@
 
                                 </div>
                             </div>
+
+                            <!--radios-->
                             <div class="form-group row">
-                                <input type="submit" class="btn btn-primary" value="Reserve">
+                                <p class="col-sm-3">Home Delivery</p>
+                                <div class="btn-group">
+
+                                    <label class="btn btn-success">
+                                        <input type="radio" name="logical"  value="option1">Yes
+                                    </label>
+
+                                    <label class="btn btn-danger" >No
+                                        <input type="radio" name="logical" value="option2">
+                                    </label>
+
+                                </div>
+
                             </div>
+                            <!--radios-->
+
+
                         </form>
                     </div>
+
+
+
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Submit
+                    </button>
                 </div>
             </div>
         </div>
-
-
     </div>
+
+
 
     <!--Footer-->
     <footer class="footer">
@@ -382,11 +428,6 @@
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
 
 </body>
 
