--- a/index.html
+++ b/index.html
@@ -172,15 +172,20 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <!--Pause/Play buttons-->
+                    <div class="btn-group" id="carouselButtons">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
 
                 </div>
             </div>
         </div>
-        <!--  <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">Home</li>
-            </ol>
-        </nav> -->
+
         <div class="row flex-row-reverse row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Our famous chocolates</h3>
@@ -217,24 +222,6 @@
                 </div>
             </div>
         </div>
-        <!--         <div class="row flex-row-reverse row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/promotion.jpg" alt="promotion">
-                    <div class="media-body">
-                        <h3>WEEK’S OFFER
-                            <span class="badge badge-danger"></span>
-                            <span class="badge badge-pill badge-success">$0.99</span>
-                        </h3>
-                    </div>
-                </div>
-                <div class="col-sm col-md">
-                    <h2>Our basket</h2>
-                    <p></p>
-                </div>
-            </div> -->
-
-
 
         <!--3rd row-->
         <div class="row flex-row-reverse row-content align-items-center">
@@ -340,10 +327,10 @@
                                 <div class="btn-group">
 
                                     <label class="btn btn-success">
-                                        <input type="radio" name="logical"  value="option1">Yes
+                                        <input type="radio" name="logical" value="option1">Yes
                                     </label>
 
-                                    <label class="btn btn-danger" >No
+                                    <label class="btn btn-danger">No
                                         <input type="radio" name="logical" value="option2">
                                     </label>
 
@@ -428,7 +415,7 @@
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
