--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                        <a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>
