--- a/contactus.html
+++ b/contactus.html
@@ -123,9 +123,9 @@
                         <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
                         <div class="col-5 col-sm-4 col-md-3">
                             <div class="input-group">
-                                <div class="input-group-addon">(</div>
+                                <div class="input-group-addon"></div>
                                 <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
-                                <div class="input-group-addon">)</div>
+                                <div class="input-group-addon"></div>
                             </div>
                         </div>
                         <div class="col-7 col-sm-6 col-md-7">
@@ -184,7 +184,7 @@
                     <ul class="list-unstyled">
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./aboutus.html">About</a></li>
-                        <li><a href="#">Menu</a></li>
+                        <li><a href="./menu.html">Menu</a></li>
                         <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
