--- a/aboutus.html
+++ b/aboutus.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link href="css/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+   <!-- build:css css/main.css -->
+<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+<link href="css/styles.css" rel="stylesheet">
+<!-- endbuild -->
     <title>Le Chocolat</title>
 </head>
 
@@ -296,11 +298,13 @@
     </footer>
     <!--END OF FOOTER-->
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+   <!-- build:js js/main.js -->
+ <script src="node_modules/jquery/dist/jquery.min.js"></script>
+ <script src="node_modules/tether/dist/js/tether.min.js"></script>
+ <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+ <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+ <script src="js/scripts.js"></script>
+ <!-- endbuild -->
 </body>
 
 </html>
